--- a/globa.css
+++ b/globa.css
@@ -29,14 +29,18 @@ h1 {
 .sec {
 
 
-    margin-top: 2rem;
+    
     text-align: center;
-    border:  3px red;
+    border: 6px red;
     border-radius: 3rem;
     background-color: gainsboro;
-    border-width: 10px;
-    border-style: double;
-    height: 17rem;
-    border-right-width: 20px;
-
+    
+    border-style: solid;
+    height: 23rem;
+    width: 300px;
+    margin:  auto;
+    box-shadow:  inset 2px 2px 20px gray, 20px 20px 20px rgb(209, 180, 14);
+    
+   
+    
 }
