--- a/globa.css
+++ b/globa.css
@@ -38,6 +38,8 @@ h1 {
     border-style: solid;
     height: 23rem;
     width: 300px;
+    padding:2rem 2rem 2rem 2rem;
+     
     margin:  auto;
     box-shadow:  inset 2px 2px 20px gray, 20px 20px 20px rgb(209, 180, 14);
     
